<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="#FFFDF3">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.example.android.popularmoviesstage1.DetailActivity">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="30sp"/>

        <ImageView
            android:id="@+id/posterImageView"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/movie_poster"
            android:scaleType="centerCrop"
            android:fadingEdge="horizontal"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="#A1A2B2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/original_title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/originalTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="9dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/original_language"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/originalLanguageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="9dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/release_date"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/releaseDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="9dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popularity_tag"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/popularityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="9dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vote_average"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/voteAverageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="9dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overview"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/overviewTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="9dp"/>

    </LinearLayout>
</ScrollView>